[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "librosa>=0.8.1",
    "matplotlib",
    "psutil",
    "pymixconsole @ git+https://github.com/csteinmetz1/pymixconsole",
    "pyloudnorm @ git+https://github.com/csteinmetz1/pyloudnorm",
    "aubio @ git+https://github.com/aubio/aubio",
    "scipy>=1.6.3",
    "soundfile",
    "soxbindings",
    "sty",
    "tensorboard",
    "setuptools==59.5.0",
    "torch==1.9.0",
]
requires-python = "==3.7.*"
readme = "README.md"
license = {text = "MIT"}

